fix: overflow issue

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -358,7 +358,7 @@ header address .tel {
   padding: 15px;
   border: 1px solid var(--grey);
   border-radius: 5px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header-nav .dropdown:hover ul {
